[package]
name = "colored_print"
version = "0.4.2"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"

[target."cfg(unix)".dependencies]
termion = "1.5.1"

[target."cfg(windows)".dependencies]
kernel32-sys = "0.2.2"
winapi = { version = "0.3.6", features = ["minwindef", "winbase", "wincon", "winnt", "processenv"] }

[dependencies]
lazy_static = "1.2.0"
